Sonar cleanup